# analytics-chat-agent

./: .env.example  .gitignore  LICENSE  README.md
backend/: .coverage  .coverage.ryugo-m1.local.96944.XIDsoEAx  .env.example  .flake8  .gitignore  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
backend/data/ga4_schema/: ga4_schema.csv  ga4_virtual_key.csv  old_ga4_schema.csv
backend/data/sql/: schema.sql  virtual_keys.sql
backend/src/analytics_chat_agent/: __init__.py  schemaEmbedder.py
backend/src/analytics_chat_agent/cli/: __init__.py  import_ga4_schema.py  main.py
backend/src/analytics_chat_agent/cli/commands/: __init__.py  analyze.py  import_ga4_events.py  import_ga4_schema.py  version.py
backend/src/analytics_chat_agent/config/: __init__.py  settings.json  settings.py
backend/src/analytics_chat_agent/core/: __init__.py  field_mapping.py  field_resolver.py  intent_extractor.py  sql_executor.py  sql_generator.py
backend/src/analytics_chat_agent/core/analyzer/: __init__.py  analysis_service.py
backend/src/analytics_chat_agent/core/database/: __init__.py  base.py  bigquery.py  postgres.py
backend/src/analytics_chat_agent/core/importer/: __init__.py  import_ga4_events.py  import_ga4_schema.py
backend/src/analytics_chat_agent/core/llm/: __init__.py  gemini.py  gpt.py
backend/src/analytics_chat_agent/core/schema/: __init__.py  importer.py  manager.py
backend/src/analytics_chat_agent/schema/: __init__.py  embedder.py
backend/src/analytics_chat_agent/types/: __init__.py  common.py  field_mapping.py
backend/tests/: README.md  __init__.py  test_cli.py  test_import_ga4_schema.py  test_importer.py  test_schema_embedder.py  test_settings.py
