[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Toshihiko Ryugo <ryugo@sivira.co>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
langchain = ">=0.3.25,<0.4.0"
openai = ">=1.82.1,<2.0.0"
qdrant-client = ">=1.14.2,<2.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
google-cloud-bigquery = ">=3.34.0,<4.0.0"
langchain-community = "^0.3.24"
langchain-openai = "^0.3.18"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
